--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1972,13 +1972,36 @@ input, select, textarea {
 		text-align: center;
 	}
 
+	#homeHeader{
+		display:flex;
+		flex-direction:column;
+		align-items:center;
+		justify-content:center;
+	}
+
+	#homeHeader{
+		text-align:center;
+	}
+
+	#homeHeader p{
+		/* margin-top:1em; */
+		font-size:1.25em;
+		line-height:1.6em;
+		max-width:40em;
+		padding:30px;
+		width:30em;
+	}
+
 	header p {
 		color: #999;
 		font-size: 1.25em;
 		position: relative;
 		margin-top: -1.25em;
 		margin-bottom: 2.25em;
+		line-height:1.6em;
 	}
+
+	
 
 	header.major {
 		text-align: center;
@@ -2688,7 +2711,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../../images/analysts-banner.jpg");
 		background-position: center center;
 		background-size: cover;
 		height: 28em;
@@ -2702,7 +2725,7 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			background: #212121;
-			background: rgba(27, 27, 27, 0.75);
+			background: rgba(27, 27, 27, 0.65);
 			color: #fff;
 			padding: 1.5em 0;
 		}
