updated README, home page banner with background image, home page banner header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1976,11 +1976,12 @@ input, select, textarea {
 		display:flex;
 		flex-direction:column;
 		align-items:center;
+		text-align:center;
 		justify-content:center;
 	}
 
-	#homeHeader{
-		text-align:center;
+	#banner #homeHeader h2{
+		font-size: 2em;
 	}
 
 	#homeHeader p{
@@ -1990,6 +1991,7 @@ input, select, textarea {
 		max-width:40em;
 		padding:30px;
 		width:30em;
+		color:white;
 	}
 
 	header p {
